Add microdata for board

--- a/team-board.html
+++ b/team-board.html
@@ -31,28 +31,28 @@ description: Bio’s for our board and teammembers.
     <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
       <h3 class='h4'>Funds management</h3>
       <ul>
-        <li>Olivier de Duve</li>
-        <li>Gilles van der Meerschen</li>
-        <li>Bruno de Radzitzky</li>
-        <li>Inès Mertens</li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Gilles van der Meerschen</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Inès Mertens</span></li>
       </ul>
     </div>
 
     <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
       <h3 class='h4'>Investors</h3>
       <ul>
-        <li>Charles Adriaenssen</li>
-        <li>Anne Prignon</li>
-        <li>Xavier Peters</li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles Adriaenssen</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Anne Prignon</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Xavier Peters</span></li>
       </ul>
     </div>
 
     <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
       <h3 class='h4'>Other members</h3>
       <ul>
-        <li>Philippe Haspeslagh</li>
-        <li>John-Eric Bertrand</li>
-        <li>Charles de Liedekerke</li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Philippe Haspeslagh</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>John-Eric Bertrand</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles de Liedekerke</span></li>
       </ul>
     </div>
   </div>
