--- a/team-board.html
+++ b/team-board.html
@@ -66,6 +66,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Olivier de Duve</h3>
       <p itemprop='jobTitle'>Chief Executive Officer</p>
       <img src='{{ site.url }}/assets/olivier.jpg' itemprop='image'  alt='Olivier de Duve'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Olivier has 17 years of experience in investment banking, capital markets and investment management in New York, Paris and London with Bear Stearns, Deutsche Bank, IXIS and Shinsei International.</p>
         <p>In 2008, he decided to start his own venture with partners. His interest for disruptive technologies led him to become co-founder of Earlytracks S.A. He then launched SemCap, an advisory boutique focused on start-ups and SMEs.</p>
@@ -78,6 +79,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Gilles van der Meerschen</h3>
       <p itemprop='jobTitle'>Premium Clients</p>
       <img src='{{ site.url }}/assets/gilles.jpg' itemprop='image' alt='Gilles van der Meerschen'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>For more than 20 years, Gilles has built up a know-how with a strong track record in product marketing, strategic planning, process optimisation and people management. His network extends across all continents giving access to finance in the private company market place, be it hedge funds, high net-worth investors, private equity firms or family offices.</p>
         <p>Gilles is a board member of several high profile companies.</p>
@@ -91,6 +93,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Bruno de Radzitzky</h3>
       <p itemprop='jobTitle'>Head of Asset Management</p>
       <img src='{{ site.url }}/assets/bruno.jpg' itemprop='image' alt='Bruno de Radzitzky'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of Asset Management.</p>
         <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
@@ -102,6 +105,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Inès Mertens de Wilmars</h3>
       <p itemprop='jobTitle'>Investment Manager</p>
       <img src='{{ site.url }}/assets/ines.jpg' itemprop='image' alt='Inès Mertens de Wilmars'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
         <p>In 2006, she moved to California where she gained extensive experience in business valuation theory and practice. She worked with companies in all stages of development, specifically with early stage companies in the Silicon Valley.</p>
@@ -115,6 +119,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Philippine du Parc Locmaria</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
       <img src='{{ site.url }}/assets/philippine.jpg' itemprop='image' alt='Philippine du Parc Locmaria'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Philippine joined MyMicroInvest in 2016 as an Investment Analyst after completing two internships; as a Junior Investment Analyst at GBL in Brussels and in Mergers and Acquisitions at HSBC in Paris. After different work experiences in a Belgian SMO, Philippine decided to go into the exciting world of entrepreneurship.</p>
         <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
@@ -125,6 +130,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Peter De Decker</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
       <img src='{{ site.url }}/assets/peter.jpg' itemprop='image' alt='Peter De Decker'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>After a two-year period as Equity Analyst in an Antwerp-based asset management company, Peter joined MyMicroInvest in April 2015. His first working experience provided him a generalist expertise in analyzing stock-listed companies.
         Peter holds a Bachelor and Master’s Degree in Business Engineering from the KU Leuven, with an international experience in Siena (Italy) as an exchange student.</p>
@@ -138,6 +144,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Brice Moureau</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
       <img src='{{ site.url }}/assets/brice.jpg' itemprop='image' alt='Brice Moureau'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>After working as a management consultant in the Energy sector for one year, Brice joined MyMicroInvest in August 2016 as an Investment Analyst. Previously, he completed a 6-month internship in India and a 2-month internship in Chile, both in International Business Development.</p>
         <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech <abbr title='Venture Capital'>VC</abbr> fund.</p>
@@ -148,6 +155,7 @@ description: Bio’s for our board and teammembers.
       <h3 itemprop='name'>Sarah Kawa</h3>
       <p itemprop='jobTitle'>Lawyer</p>
       <img src='{{ site.url }}/assets/sarah.jpg' itemprop='image' alt='Sarah Kawa'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>After several internships in international law firms and a working experience as a lawyer in the area of financial services, Sarah joined MyMicroInvest in March 2015.</p>
         <p>She holds a Bachelor Degree in law from the Saint-Louis University and a Master’s Degree in economic law from the Université Libre de Bruxelles, with international experiences in Rome and Tel-Aviv. She always had a great interest in both entrepreneurial and financial world.</p>
