Replace photo on Get Funded page

--- a/get-funded.html
+++ b/get-funded.html
@@ -85,7 +85,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
     </div>
 
     <div class='sm-col sm-col-6 px2'>
-      <img src='/assets/people-table.jpg' alt='People at a table'/>
+      <img src='/assets/alex.jpg' alt='Alex presenting'/>
     </div>
   </div>
 
