Update header backgrounds

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -4,7 +4,7 @@ title: Legal Disclaimer
 description: Specifies the scope of rights that may be exercised by this website.
 ---
 
-<div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/building-b.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Legal Disclaimer</h1>
   </div>
