--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 description: Oops, we can’t seem to find this page.
 ---
 
-<div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/building-a.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>404 &mdash; Page Not Found</h1>
   </div>
