--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Inventures
 description: Inventures is the first European crowd-venturing impact fund, a venture capital firm based in Brussels, Belgium, investing in early stage impact businesses.
 ---
 
-<div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/building-a.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>The First European Crowd-Venturing Impact Fund</h1>
   </div>
