--- a/invest.html
+++ b/invest.html
@@ -4,7 +4,7 @@ title: Invest
 description: Inventures is the first European crowd-venturing impact fund and we still have room for investors.
 ---
 
-<div class='px3 py4 bg-cover' style='background-image: url(/assets/desert.jpg); background-size: cover'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains-snow.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Invest</h1>
   </div>
