--- a/team-board.html
+++ b/team-board.html
@@ -4,7 +4,7 @@ title: Board & Team
 description: Bio’s for our board and teammembers.
 ---
 
-<div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains.jpg); background-size: cover'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/mountains-clouds.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Board & Team</h1>
   </div>
