--- a/venture-capital-funds/index.html
+++ b/venture-capital-funds/index.html
@@ -4,7 +4,7 @@ title: Venture Capital Funds
 description: "Inventures manages two different funds: Inventures I & II"
 ---
 
-<div class='px3 py4 bg-cover' style='background-image: url(/assets/building.jpg); background-size: cover'>
+<div class='px3 py4 bg-cover' style='background-image: url(/assets/building-b.jpg); background-size: cover'>
   <div class='container'>
     <h1 class='white inline-block p1' style='background-color: rgba(5,5,5,0.3)'>Our Venture Capital Funds</h1>
   </div>
