--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
   <div class='sm-col-8 mx-auto center'>
     <a href='https://www.youtube.com/watch?v=HeF_6vktHq0' title='Watch on YouTube'>
-      <img src='/assets/magic5.png' alt='Magic 5 @ YouTube'/>
+      <img src='/assets/magic5.jpg' alt='Magic 5 @ YouTube'/>
     </a>
     <p class='italic h5'>Inventures presented by Ines Mertens and Olivier De Duve during the Magic 5 live event Ghent, Belgium (November 2016)</p>
   </div>
