Improve div alignments

--- a/get-funded.html
+++ b/get-funded.html
@@ -36,9 +36,9 @@ description: Inventures is the first European crowd-venturing impact fund lookin
 
   <p>Go through our checklist and find out if you’re eligible for financing:</p>
 
-  <div class='clearfix mxn2'>
-    <div class='sm-col sm-col-6 px2'>
-      <ul class='list-reset bg-athens-gray p2'>
+  <div class='clearfix col col-12 mxn2 bg-athens-gray mb3'>
+    <div class='sm-col sm-col-6 px1'>
+      <ul class='list-reset p2'>
         <li>☑ I’m an ambitious and motivated entrepreneur</li>
         <li>☑ With a clear vision for my business</li>
         <li>☑ I value excellence and execution</li>
@@ -46,8 +46,8 @@ description: Inventures is the first European crowd-venturing impact fund lookin
       </ul>
     </div>
 
-    <div class='sm-col sm-col-6 px2'>
-      <ul class='list-reset bg-athens-gray p2'>
+    <div class='sm-col sm-col-6 px1'>
+      <ul class='list-reset p2'>
         <li>☑ I’m looking to raise funds before March 2018</li>
         <li>☑ I’m looking for a total capital increase of minimum €250,000 and maximum €5,000,000</li>
         <li>☑ My company is tackling one of three SDGs: education, health, or environment</li>
@@ -56,7 +56,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
     </div>
   </div>
 
-  <div class='clearfix mxn2 mt2 mb2'>
+  <div class='clearfix mxn2 mb2'>
     <div class='sm-col sm-col-4 center px2'>
       <img src='/assets/sdg-education.jpg' alt='Education SDG logo'/>
       <h3 class='regular'>Education</h3>
