--- a/index.html
+++ b/index.html
@@ -50,22 +50,24 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
     </div>
   </div>
 
-  <div class='col sm-col-6 bg-athens-gray p1 mt2 mb2'>
-    <div class='center py2'>
-      <img src='/assets/inventures1.svg' width='70%' alt='Inventures I'/>
+  <div class='clearfix mxn1 bg-athens-gray'>
+    <div class='col sm-col-6 p1 mt2 mb2'>
+      <div class='center py2'>
+        <img src='/assets/inventures1.svg' width='70%' alt='Inventures I'/>
+      </div>
+
+      <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment.</p>
+
+      <p>See the <a href='/venture-capital-funds/inventures-i/'>portfolio here</a>. The fund is now closed to new businesses, but Inventures II is just getting started.</p>
     </div>
 
-    <p>Inventures I is a €15 Million fund that focuses on seed, early stage and growth businesses, and has selected 15 companies for investment.</p>
+    <div class='col sm-col-6 p1 mt2 mb2'>
+      <div class='center py2'>
+        <img src='/assets/inventures2.svg' width='70%' alt='Inventures II'/>
+      </div>
 
-    <p>See the <a href='/venture-capital-funds/inventures-i/'>portfolio here</a>. The fund is now closed to new businesses, but Inventures II is just getting started.</p>
-  </div>
-
-  <div class='col sm-col-6 bg-athens-gray p1 mt2 mb2'>
-    <div class='center py2'>
-      <img src='/assets/inventures2.svg' width='70%' alt='Inventures II'/>
+      <p>Inventures II SDG Growth is a venture capital fund currently accepting new investment. The fund has raised €15 Million so far, and aims to raise €50 Million. The fund will invest in 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
     </div>
-
-    <p>Inventures II SDG Growth is a venture capital fund currently accepting new investment. The fund has raised €15 Million so far, and aims to raise €50 Million. The fund will invest in 35 promising start-ups and scale-ups with a high growth potential. Inventures II is unique because it focuses on businesses that positively impact the United Nations Sustainable Development Goals (SDGs).</p>
   </div>
 
   <div class='col col-12'>
