--- a/venture-capital-funds/inventures-i.html
+++ b/venture-capital-funds/inventures-i.html
@@ -47,57 +47,61 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
 
   <p>We have outlined the following aspects of each industry that are of interest to us:</p>
 
-  <div class='sm-col sm-col-4'>
-    <h3>Environment and conservation</h3>
+  <div class='cleafix col col-12'>
+    <div class='sm-col sm-col-4'>
+      <h3>Environment and conservation</h3>
 
-    <ul>
-      <li>Reduce energy consumption, and promote green energy production.
-      <li>Enable and spread access to vital resources.
-      <li>Promote green and efficient means of transportation.
-    </ul>
+      <ul>
+        <li>Reduce energy consumption, and promote green energy production.
+        <li>Enable and spread access to vital resources.
+        <li>Promote green and efficient means of transportation.
+      </ul>
+    </div>
+
+    <div class='sm-col sm-col-4'>
+      <h3>Health</h3>
+
+      <ul>
+        <li>A healthy, balanced and environmentally friendly diet.</li>
+        <li>Reducing widespread physical and mental health problems like obesity, anorexia, depression.</li>
+        <li>Enable and grant access to specialised treatment for a larger public.</li>
+      </ul>
+    </div>
+
+    <div class='sm-col sm-col-4'>
+      <h3>Education</h3>
+
+      <ul>
+        <li>Enable and grant access to smart education.</li>
+        <li>Promote access to communication technologies such as internet and mobile phones.</li>
+      </ul>
+    </div>
   </div>
 
-  <div class='sm-col sm-col-4'>
-    <h3>Health</h3>
+  <div class='cleafix col col-12'>
+    <div class='sm-col sm-col-4'>
+      <h3>Society</h3>
 
-    <ul>
-      <li>A healthy, balanced and environmentally friendly diet.</li>
-      <li>Reducing widespread physical and mental health problems like obesity, anorexia, depression.</li>
-      <li>Enable and grant access to specialised treatment for a larger public.</li>
-    </ul>
-  </div>
+      <ul>
+        <li>Enable and support minority integration.</li>
+        <li>Help the well-being of families.</li>
+      </ul>
+    </div>
 
-  <div class='sm-col sm-col-4'>
-    <h3>Education</h3>
+    <div class='sm-col sm-col-4'>
+      <h3>Economy</h3>
 
-    <ul>
-      <li>Enable and grant access to smart education.</li>
-      <li>Promote access to communication technologies such as internet and mobile phones.</li>
-    </ul>
-  </div>
-
-  <div class='sm-col sm-col-4'>
-    <h3>Society</h3>
-
-    <ul>
-      <li>Enable and support minority integration.</li>
-      <li>Help the well-being of families.</li>
-    </ul>
-  </div>
-
-  <div class='sm-col sm-col-4'>
-    <h3>Economy</h3>
-
-    <ul>
-      <li>Promote access for all to transparent financial services.</li>
-      <li>Support a stronger economy and reduce unemployment.</li>
-      <li>Promote the businesses of micro-entrepreneurs.</li>
-    </ul>
+      <ul>
+        <li>Promote access for all to transparent financial services.</li>
+        <li>Support a stronger economy and reduce unemployment.</li>
+        <li>Promote the businesses of micro-entrepreneurs.</li>
+      </ul>
+    </div>
   </div>
 
   <h2 class='col col-12'>Portfolio</h2>
 
-  <div class='clearfix mxn2'>
+  <div class='clearfix col col-12 mxn2'>
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/2houses.jpg' alt='2Houses logo'/>
       <p><a href='https://www.2houses.com/'>2houses</a> is an online platform offering practical tools, content and advice for separated parents.</p>
@@ -112,7 +116,8 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
       <img src='/assets/acarup.jpg' alt='2Acar’Up logo'/>
       <p><a href='http://acarup.com/'>Acar’Up</a> developed a new method to eradicate house dust mites, a product which attracts mites and a technical textile which traps the allergenic dust mites.</p>
     </div>
-
+  </div>
+  <div class='clearfix col col-12 mxn2'>
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/aproplan.jpg' alt='AproPLAN logo'/>
       <p><a href='http://www.aproplan.com/'>AproPLAN</a> is construction management software that lets you keep track of your progress & collaborate with your team. Get work done in the office and on-site.</p>
@@ -127,7 +132,8 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
       <img src='/assets/domobios.jpg' alt='Domobios logo'/>
       <p><a href='http://www.domobios.com/'>Domobios</a> is specialized in the research and development of sustainable and non-toxic products that eliminate household pests such as mites, bedbugs, lice, fleas, and cockroaches.</p>
     </div>
-
+  </div>
+  <div class='clearfix col col-12 mxn2'>
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/domoscio.jpg' alt='Domoscio logo'/>
       <p><a href='https://domoscio.com/'>Domoscio</a> creates adaptive e-learning for better learning and retention by linking cognitive science, big data and artificial intelligence together.</p>
@@ -142,7 +148,8 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
       <img src='/assets/fearhunters.jpg' alt='Fear Hunters logo'/>
       <p><a href='http://www.koorachoo.com/'>Fear Hunters</a> (aka KooraChoo + AromaKids) is a solution for parents and children to help them manage their emotions with a plush toy book and essential oil spray.</p>
     </div>
-
+  </div>
+  <div class='clearfix col col-12 mxn2'>
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/oncodna.jpg' alt='OncoDNA logo'/>
       <p><a href='http://www.oncodna.com/'>OncoDNA</a> is a medical diagnosis company with experience in DNA sequencing and diagnostic analyses in oncology.</p>
@@ -157,7 +164,8 @@ description: "Portfolio of our first, now closed, fund: Inventures I"
       <img src='/assets/santech.jpg' alt='Santech logo'/>
       <p><a href='https://www.santech.fr/'>Santech</a> specialises in the development and commercialisation in B2B2C sector of a customisable medical platform, specialised in prevention and support.</p>
     </div>
-
+  </div>
+  <div class='clearfix col col-12 mxn2'>
     <div class='sm-col sm-col-4 px2'>
       <img src='/assets/ssx.jpg' alt='Social Stock Exchange logo'/>
       <p><a href='http://www.socialstockexchange.com/'>Social Stock Exchange</a> is a fully regulated market place designed to improve access to capital for social impact businesses by connecting them with impact investors.</p>
