--- a/team-board.html
+++ b/team-board.html
@@ -27,8 +27,8 @@ description: Bio’s for our board and teammembers.
 
   <p>The Investment Committee includes:</p>
 
-  <div class='clearfix mxn2'>
-    <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
+  <div class='clearfix mxn2 bg-athens-gray'>
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
       <h3 class='h4'>Funds management</h3>
       <ul>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
@@ -38,7 +38,7 @@ description: Bio’s for our board and teammembers.
       </ul>
     </div>
 
-    <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
       <h3 class='h4'>Investors</h3>
       <ul>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Charles Adriaenssen</span></li>
@@ -47,7 +47,7 @@ description: Bio’s for our board and teammembers.
       </ul>
     </div>
 
-    <div class='sm-col sm-col-4 px2 py1 bg-athens-gray mb1'>
+    <div class='sm-col sm-col-4 px2 py1 mb1'>
       <h3 class='h4'>Other members</h3>
       <ul>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Philippe Haspeslagh</span></li>
