Shorten Ines' name

--- a/team-board.html
+++ b/team-board.html
@@ -102,9 +102,9 @@ description: Bio’s for our board and teammembers.
     </div>
 
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
-      <h3 itemprop='name'>Inès Mertens de Wilmars</h3>
+      <h3 itemprop='name'>Inès Mertens</h3>
       <p itemprop='jobTitle'>Investment Manager</p>
-      <img src='{{ site.url }}/assets/ines.jpg' itemprop='image' alt='Inès Mertens de Wilmars'/>
+      <img src='{{ site.url }}/assets/ines.jpg' itemprop='image' alt='Inès Mertens'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
         <p>Inès has over eight years of experience in Business Valuations and Corporate Finance. She spent four years at Deloitte Corporate Finance where she gained her financial expertise in global corporate finance including business valuations, mergers, and acquisitions.</p>
