Clarify CTA mailto button

--- a/invest.html
+++ b/invest.html
@@ -49,6 +49,6 @@ description: Inventures is the first European crowd-venturing impact fund and we
 
   <div class='col col-12 center'>
     <p>Interested in investing for Inventures II?<br/>We are willing to provide more information.</p>
-    <a href='mailo:{{ site.email }}' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CONTACT US</a>
+    <a href='mailto:{{ site.email }}' class='mt1 mb2'>{{ site.email }}</a>
   </div>
 </div>
