Add Alex to team page

--- a/get-funded.html
+++ b/get-funded.html
@@ -84,7 +84,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
     </div>
 
     <div class='sm-col sm-col-6 px2'>
-      <img src='/assets/alex.jpg' alt='Alex presenting'/>
+      <img src='/assets/alex-presenting.jpg' alt='Alex presenting'/>
     </div>
   </div>
 
