--- a/team-board.html
+++ b/team-board.html
@@ -97,10 +97,24 @@ description: Bio’s for our board and teammembers.
       <div itemprop='description'>
         <p>Bruno has almost 25 years experience in M&A transactions in Europe, the USA, South America, Asia and South Africa. He started his career as a lawyer, member of the Brussels Bar. He then joined Etex (a Belgian group active in building materials around the world) as a Company Lawyer, and then as Senior Legal Counsel. He joined MyMicroInvest on January 1st 2017 as Head of Asset Management.</p>
         <p>He served as a director of several Etex companies in Belgium, Luxembourg, France and Spain. He also was a board member and the Compliance Officer of the Etex Pension Fund.</p>
-        <p>Bruno holds a Master’s Degree in Laws (Louvain-LN), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
+        <p>Bruno holds a Master’s Degree in Laws (Louvain-la-Neuve), a post degree in International and European Laws (VUB) and a LLM (Queen Mary & Westfield College).</p>
       </div>
     </div>
 
+    <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
+      <h3 itemprop='name'>Alex Houtart</h3>
+      <p itemprop='jobTitle'>Manager</p>
+      <img src='{{ site.url }}/assets/alex.jpg' itemprop='image' width='189' height='189' alt='Alex Houtart'/>
+      <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
+      <div itemprop='description'>
+        <p>Alex is expert in sustainable finance. He started his career as attorney at law in Belgium and France. He then moved to the financial sector, with 17 years experience in financing SME’s, amongst other as global head of international operations & trade finance (BNP Paribas Fortis). He developed the sustainable finance strategy for BNP Paribas Fortis, developing a € 5 billion portfolio of SRI funds, Green and Social Bonds, ESG and impact investing.</p>
+        <p>Alex Joined MyMicroInvest in 2016 as expert in Sustainable Finance to structure Inventures 2 and chairs the advisory board as Chief Sustainability Officer.</p>
+        <p>Alex holds a Master’s Degree in Laws (Louvain-la-Neuve), a post degree in ITC management (Namur). He is lecturer in Sustainable Finance at ICHEC Business School and has a seat in the board a several companies and NGO’s.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Inès Mertens</h3>
       <p itemprop='jobTitle'>Investment Manager</p>
@@ -112,9 +126,7 @@ description: Bio’s for our board and teammembers.
         <p>She holds a Master’s degree in business administration from the University of Louvain-la-Neuve (UCL). She has become a member of the National Association of Certified Valuation Analyst (NACVA) and received the designation of Accredited Valuation Analyst (AVA).</p>
       </div>
     </div>
-  </div>
 
-  <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Philippine du Parc Locmaria</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
@@ -125,7 +137,9 @@ description: Bio’s for our board and teammembers.
         <p>Philippine studied in Belgium and China. She post-graduated Magna Cum Laude from Business Engineering at Louvain School of Management (Finance and Management major).</p>
       </div>
     </div>
+  </div>
 
+  <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Peter De Decker</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
@@ -137,9 +151,7 @@ description: Bio’s for our board and teammembers.
         <p>Peter passed all three <abbr title='Chartered Financial Analyst'>CFA</abbr> exams.</p>
       </div>
     </div>
-  </div>
 
-  <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Brice Moureau</h3>
       <p itemprop='jobTitle'>Investment Analyst</p>
@@ -150,7 +162,10 @@ description: Bio’s for our board and teammembers.
         <p>Brice graduated Magna Cum Laude from Solvay Business School (Université Libre de Bruxelles). There he specialized in Entrepreneurial Finance through writing his Master Thesis on the fundraising of a €110M Cleantech <abbr title='Venture Capital'>VC</abbr> fund.</p>
       </div>
     </div>
+  </div>
 
+
+  <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Sarah Kawa</h3>
       <p itemprop='jobTitle'>Lawyer</p>
