Add cities, partnership and work SDGs

--- a/get-funded.html
+++ b/get-funded.html
@@ -57,21 +57,40 @@ description: Inventures is the first European crowd-venturing impact fund lookin
 
   <div class='clearfix mxn2 mb2'>
     <div class='sm-col sm-col-4 center px2'>
+      <img src='/assets/sdg-health.jpg' alt='Health SDG logo'/>
+      <h3 class='regular'>Health</h3>
+      <p>Promoting and spreading good health and well-being.</p>
+    </div>
+
+
+    <div class='sm-col sm-col-4 center px2'>
       <img src='/assets/sdg-education.jpg' alt='Education SDG logo'/>
       <h3 class='regular'>Education</h3>
       <p>Enabling quality education for everyone.</p>
     </div>
 
     <div class='sm-col sm-col-4 center px2'>
-      <img src='/assets/sdg-health.jpg' alt='Health SDG logo'/>
-      <h3 class='regular'>Health</h3>
-      <p>Promoting and spreading good health and well-being.</p>
-    </div>
-
-    <div class='sm-col sm-col-4 center px2'>
       <img src='/assets/sdg-environment.jpg' alt='Environment SDG logo'/>
       <h3 class='regular'>Environment</h3>
       <p>Using sustainable energy and promoting affordable energy.</p>
+    </div>
+
+    <div class='sm-col sm-col-4 center px2'>
+      <img src='/assets/sdg-work.jpg' alt='Work SDG logo'/>
+      <h3 class='regular'>Work</h3>
+      <p>Promote inclusive and sustainable economic growth employment and decent work for all.</p>
+    </div>
+
+    <div class='sm-col sm-col-4 center px2'>
+      <img src='/assets/sdg-cities.jpg' alt='Cities SDG logo'/>
+      <h3 class='regular'>Cities</h3>
+      <p>Make cities inclusive, safe, resilient and sustainable.</p>
+    </div>
+
+    <div class='sm-col sm-col-4 center px2'>
+      <img src='/assets/sdg-partnership.jpg' alt='Partnership SDG logo'/>
+      <h3 class='regular'>Partnership</h3>
+      <p>Strengthen the means of implementation and revitalize global partnerships for sustainable development.</p>
     </div>
   </div>
 
