Update title Alex

--- a/team-board.html
+++ b/team-board.html
@@ -103,7 +103,7 @@ description: Bio’s for our board and teammembers.
 
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
       <h3 itemprop='name'>Alex Houtart</h3>
-      <p itemprop='jobTitle'>Manager</p>
+      <p itemprop='jobTitle'>Chief Sustainability Officer</p>
       <img src='{{ site.url }}/assets/alex.jpg' itemprop='image' width='189' height='189' alt='Alex Houtart'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
