Fix apply now link

--- a/get-funded.html
+++ b/get-funded.html
@@ -27,7 +27,7 @@ description: Inventures is the first European crowd-venturing impact fund lookin
   </div>
 
   <p class='center py2'>
-    <a href='https://www.mymicroinvest.com/financings/new?cfp=14' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TODAY, GET FUNDED TOMORROW!</a>
+    <a href='https://www.mymicroinvest.com/application/welcome/edit?cfp=14' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TODAY, GET FUNDED TOMORROW!</a>
   </p>
 
   <hr class='mt3 mb4'/>
@@ -110,6 +110,6 @@ description: Inventures is the first European crowd-venturing impact fund lookin
   <p class='center bold mt3 mb3'>Don’t miss out on your chance to become part of an inspiring adventure!</p>
 
   <p class='center'>
-    <a href='https://www.mymicroinvest.com/financings/new?cfp=14' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>FILL IN OUR ONLINE APPLICATION</a>
+    <a href='https://www.mymicroinvest.com/en/application/welcome/edit?cfp=14' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>FILL IN OUR ONLINE APPLICATION</a>
   </p>
 </div>
