--- a/team-board.html
+++ b/team-board.html
@@ -15,9 +15,9 @@ description: Bio’s for our board and teammembers.
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-6 px2'>
-      <p>Inventures is managed by MyMicroInvest S.A.. The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
+      <p>The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
 
-      <p>The Board of Directors of Inventures II is composed of the three managing team members plus MyMicroInvest, acting as managing director. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is composed of seven directors, plus three other members. The Investment Committee is an independent shareholders representative.</p>
+      <p>The Board of Directors of Inventures II is composed of the two managing team members plus Olivier de Duve, acting as managing director. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is composed of seven directors, plus three other members. The Investment Committee is an independent shareholders representative.</p>
     </div>
 
     <div class='col sm-col-6 px2'>
@@ -32,7 +32,6 @@ description: Bio’s for our board and teammembers.
       <h3 class='h4'>Funds management</h3>
       <ul>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Gilles van der Meerschen</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Inès Mertens</span></li>
       </ul>
@@ -59,7 +58,7 @@ description: Bio’s for our board and teammembers.
 
   <h2>Team</h2>
 
-  <p>Inventures is managed by MyMicroInvest S.A., which is composed of the following team:</p>
+  <p>Inventures is composed of the following team:</p>
 
   <div class='clearfix mxn2'>
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
