udpate welcome page
update (email address) with an info@inventures type

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <h3 class='center regular py1'>Entrepreneur</h3>
 
-      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund and also conducting a crowdfunding campaign? Please fill in an application to raise funds on <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>here</a> or send us a message to know more.</p>
+      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund ? Then contact us directly at (email address).
 
       <a href='/get-funded' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
     </div>
