--- a/disclaimer.html
+++ b/disclaimer.html
@@ -11,7 +11,7 @@ description: Specifies the scope of rights that may be exercised by this website
 </div>
 
 <div class='container px2 mt3'>
-  <p>This website is for purely illustrative purposes and contains information on private investment schemes promoted, administered and/or managed by Mymicroinvest SA. Access to this website is restricted in Belgium and might be restricted in other jurisdictions as well. By accessing to this website, you acknowledge that your investor profile matches the regulatory applicable regulatory constraints.</p>
+  <p>This website is for purely illustrative purposes and contains information on private investment schemes promoted, administered and/or managed by Inventures. Access to this website is restricted in Belgium and might be restricted in other jurisdictions as well. By accessing to this website, you acknowledge that your investor profile matches the regulatory applicable regulatory constraints.</p>
 
   <p>Inventures receives on a regular basis (usually each month or each quarter) a reporting from the portfolio companies on the basis of which the KPIs and the execution of the business plan are monitored. When significant changes appear, when compared with the business plan, the Investment Committee of Inventures is informed.</p>
 
