Remove Gilles and add Laurent

--- a/team-board.html
+++ b/team-board.html
@@ -32,7 +32,6 @@ description: Bio’s for our board and teammembers.
       <h3 class='h4'>Funds management</h3>
       <ul>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Gilles van der Meerschen</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Inès Mertens</span></li>
       </ul>
@@ -76,14 +75,14 @@ description: Bio’s for our board and teammembers.
     </div>
 
     <div class='sm-col sm-col-6 px2 py1' itemscope itemtype='http://schema.org/Person'>
-      <h3 itemprop='name'>Gilles van der Meerschen</h3>
-      <p itemprop='jobTitle'>Premium Clients</p>
-      <img src='{{ site.url }}/assets/gilles.jpg' itemprop='image' width='189' height='189' alt='Gilles van der Meerschen'/>
+      <h3 itemprop='name'>Laurent Jouret</h3>
+      <p itemprop='jobTitle'>Senior Investment Manager</p>
+      <img src='{{ site.url }}/assets/laurent.jpg' itemprop='image' width='189' height='189' alt='Laurent Jouret'/>
       <meta itemprop='worksFor' itemscope itemtype='http://schema.org/Organization' itemref='organization'>
       <div itemprop='description'>
-        <p>For more than 20 years, Gilles has built up a know-how with a strong track record in product marketing, strategic planning, process optimisation and people management. His network extends across all continents giving access to finance in the private company market place, be it hedge funds, high net-worth investors, private equity firms or family offices.</p>
-        <p>Gilles is a board member of several high profile companies.</p>
-        <p>Gilles holds a bachelor degree in Business and Administration and a master degree in Marketing from the European Business School of London. A few years later, he followed the Program for Executive Development (PED) at IMD.</p>
+        <p>Laurent has been part of the Inventures family since October 2017.</p>
+        <p>After working in finance for several Belgian and foreign banks, Laurent spent 10 years working for Sofina, an investment holding company where he had the chance to work on direct investment opportunities and to manage a global portfolio for Private Equity funds in Luxembourg.</p>
+        <p>Laurent holds a Master’s degree in Business Engineering from the Louvain School of Management.</p>
       </div>
     </div>
   </div>
