--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
     </div>
 
     <div class='col sm-col-6 px2 mb3'>
-      <p>Both Inventures I & II empower citizens and help to democratize venture capital by sometimes offering co-investment on the crowdfunding platform, MyMicroInvest.</p>
+      <p>Both Inventures I & II empower citizens and help to democratise venture capital by offering co-investment on some campaigns the investment platform, MyMicroInvest.</p>
 
       <p>Including citizens in a multi-stakeholder partnership reinforces the selection of companies, and increases the chances of success by creating a large community of ambassadors sharing the same values.</p>
     </div>
@@ -82,7 +82,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
     </div>
   </div>
 
-  <p class='col col-12 center py3'>Read more about our crowdfunding partner: <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>MyMicroInvest</a></p>
+  <p class='col col-12 center py3'>Read more about our partner <a href='https://www.mymicroinvest.com/' title='Investment crowdfunding together with professionals'>MyMicroInvest</a></p>
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-6 px2'>
