team page - update

--- a/team-board.html
+++ b/team-board.html
@@ -17,11 +17,11 @@ description: Bio’s for our board and teammembers.
     <div class='col sm-col-6 px2'>
       <p>The Inventures investment committee meets approximately once a month to review investments, make decisions, and act as a representative of shareholders and management.</p>
 
-      <p>The Board of Directors of Inventures II is composed of the two managing team members plus Olivier de Duve, acting as managing director. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is composed of seven directors, plus three other members. The Investment Committee is an independent shareholders representative.</p>
+      <p>The Board of Directors of Inventures II is composed of the three managing team members plus Olivier de Duve, acting as managing partner. Similar to Inventures I, the board has set up a separate organ named the Investment Committee. The Investment Committee is an independent shareholders representative.</p>
     </div>
 
     <div class='col sm-col-6 px2'>
-      <p>Alongside the Board and the Investment Committee, there is an Advisory Board. It acts as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It consists of one MyMicroInvest team member and two independent experts in sustainability and/or corporate governance matters.</p>
+      <p>Alongside the Board and the Investment Committee, there is an Advisory Board. It acts as strategic advisor to the Board of Directors for questions related to impact assessment and conflicts of interests. It consists of three independent experts in sustainability and/or corporate governance matters.</p>
     </div>
   </div>
 
@@ -33,7 +33,7 @@ description: Bio’s for our board and teammembers.
       <ul>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Olivier de Duve</span></li>
         <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Bruno de Radzitzky</span></li>
-        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Inès Mertens</span></li>
+        <li itemscope itemtype='http://schema.org/Person'><span itemtype='name'>Laurent Jouret</span></li>
       </ul>
     </div>
 
