--- a/team-board.html
+++ b/team-board.html
@@ -165,6 +165,6 @@ description: Bio’s for our board and teammembers.
   <hr class='mt3 mb3'/>
 
   <div class='col col-12 center'>
-    <p>Feel free to contact our team if you have any questions. You can call us at <a href='tel:{{ site.phone }}'>{{ site.phone }}</a>, Monday to Friday, 9am-6pm, or contact us via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
+    <p>Feel free to contact our team if you have any questions. Monday to Friday, 9am-6pm, via <a href='mailto:{{ site.email }}' title='Get in touch'>mail</a>.</p>
   </div>
 </div>
